testsuite/tests/structs/invalid_field_name/test.out
test.py:10: error: Field names must be lower-case
Done
